Fix header overflow.

--- a/asset/scss/_screen.scss
+++ b/asset/scss/_screen.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 // Header
 
 #skipnav {
@@ -19,7 +23,6 @@
 
 header {
     width: 100%;
-    overflow: hidden;
 }
 
 header h1 {
